[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.terraswap-factory]
codegen-units = 1
incremental = false

[profile.release.package.terraswap-router]
codegen-units = 1
incremental = false

[profile.release.package.terraswap-pair]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
