[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.tfi-factory]
codegen-units = 1
incremental = false

[profile.release.package.tfi-pair]
codegen-units = 1
incremental = false

[profile.release.package.dso-token]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
