[package]
name = "tfi-factory"
version = "0.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A tfi factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
tfi = { path = "../../packages/tfi", default-features = false, version = "0.1.0"}
cosmwasm-std = { version = "=1.0.0-beta", features = ["iterator"] }
cw-storage-plus = { version = "=0.10", features = ["iterator"]}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
thiserror = "1"

[dev-dependencies]
cosmwasm-schema = "=1.0.0-beta"
cosmwasm-storage = { version = "=1.0.0-beta", features = ["iterator"] }
anyhow = { version = "1", features = ["backtrace"] }
cw-multi-test = "=0.10"
tfi-pair = { path = "../tfi-pair", version = "0.1" }
dso-token = { path = "../dso-token", version = "0.1" }
derivative = "2"
cw4-group = { version = "=0.10", features = ["library"] }
cw4 = "=0.10"
cw20 = "=0.10"
cw20-base = { version = "=0.10", features = ["library"] }

