[package]
name = "tfi-factory"
version = "0.2.2"
authors = ["Confio GmbH", "Terraform Labs, PTE."]
edition = "2018"
description = "A tfi factory contract - auto pair contract generator and also directory for all pairs"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
tfi = { path = "../../packages/tfi", default-features = false, version = "0.2.2"}
cosmwasm-std = "1.0.0-beta5"
cw2 = "0.11.1"
cw-storage-plus = "0.11.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
thiserror = "1"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta5"
cosmwasm-storage = "1.0.0-beta5"
anyhow = { version = "1", features = ["backtrace"] }
cw-multi-test = "0.11.1"
tfi-pair = { path = "../tfi-pair", version = "0.2.2" }
trusted-token = { path = "../trusted-token", version = "0.2.2" }
derivative = "2"
tg4-group = { version = "0.6.1", features = ["library"] }
tg4 = "0.6.1"
tg-bindings = "0.6.1"
tg-bindings-test = "0.6.1"
cw20 = "0.11.1"
cw20-base = { version = "0.11.1", features = ["library"] }

