[package]
name = "tfi-pair"
version = "0.4.0"
authors = ["Confio GmbH", "Terraform Labs, PTE."]
edition = "2018"
description = "A tfi pair contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
tfi = { path = "../../packages/tfi", default-features = false, version = "0.4.0"}
cw2 = "0.14.0"
cw20 = "0.14.0"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.14.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-storage = "1.0.0"
cw20-base = { version = "0.14.0", features = ["library"] }
cw-multi-test = "0.14.0"
tfi-mocks = { path = "../../packages/mocks", version = "0.4.0"}
derivative = "2"
anyhow = { version = "1", features = ["backtrace"] }
