[package]
name = "trusted-token"
version = "0.3.1"
authors = ["Confio GmbH"]
edition = "2018"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta6"
cw-storage-plus = "0.13.1"
cw20-base = { version = "0.13.1", features = ["library"] }
cw2 = "0.13.1"
tg4 = "0.6.2"
cw20 = "0.13.1"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.0.0-beta6"
cw-multi-test = "0.13.1"
derivative = "2"
tg4-group = { version = "0.6.2", features = ["library"] }
